examples/diagnostics/expected/1231-diagnostics-alias-rhs-unknown-type.stderr
error: unknown type 'NoSuchType'
  --> examples/diagnostics/1231-diagnostics-alias-rhs-unknown-type.sx:16:11
   |
16 | Bad :: [3]NoSuchType;
   |           ^^^^^^^^^^
